<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listaCole"
        android:layout_width="368dp"
        android:layout_height="309dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonIdioma" />

    <Button
        android:id="@+id/botonCrearCole"
        style="@style/Botones"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_collection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaCole" />

    <ImageButton
        android:id="@+id/botonIdioma"
        android:layout_width="46dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/language"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textUser"
        android:layout_width="94dp"
        android:layout_height="20dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/listaCole"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/botonPerfil"
        android:layout_width="40dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:adjustViewBounds="true"
        android:background="@drawable/perfil"
        android:maxWidth="60dp"
        android:maxHeight="60dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/listaCole"
        app:layout_constraintEnd_toStartOf="@+id/textUser" />

    <Switch
        android:id="@+id/switchModoOscuro"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/dark_mode"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/listaCole"
        app:layout_constraintEnd_toStartOf="@+id/botonIdioma"
        app:layout_constraintStart_toEndOf="@+id/textUser" />

    <Button
        android:id="@+id/botonUsuarios"
        style="@style/Botones"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/show_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonCrearCole" />

</androidx.constraintlayout.widget.ConstraintLayout>